# watafac

./: CMakeLists.txt  README.md
examples/: example_1_1.c
include/watafac/: Source.hpp
include/watafac/ast/: Arche.hpp  Ast.h  Ast.hpp  Decl.hpp  Declarator.hpp  Expr.hpp  Group.hpp  Program.hpp  Stmt.hpp  Type.hpp  TypeSpec.hpp  _deprecated_Declarator.hpp
include/watafac/diag/: Diagnostics.hpp
include/watafac/env/: Session.hpp
include/watafac/lex/: Lexer.hpp  Token.hpp
include/watafac/parse/: Parser.hpp
include/watafac/src/: Source.hpp
lib/: CMakeLists.txt  Source.cpp
lib/ast/: CMakeLists.txt  Decl.cpp  Declarator.cpp  Expr.cpp  Program.cpp  Stmt.cpp  Type.cpp  _deprecated_TypeSpec.cpp
lib/diag/: CMakeLists.txt  Diagnostics.cpp
lib/env/: CMakeLists.txt  Session.cpp
lib/lex/: CMakeLists.txt  Lexer.cpp  Token.cpp
lib/parse/: CMakeLists.txt  Parser.cpp
lib/src/: CMakeLists.txt  Source.cpp
tools/wfac/: CMakeLists.txt  wfac.cpp
